[main] - fix header content shifted to the right

--- a/src/common/components/Header/styles.module.scss
+++ b/src/common/components/Header/styles.module.scss
@@ -264,7 +264,7 @@
   }
 
   .station_info {
-    max-width: 300px;
+    max-width: 230px;
 
     h2 {
       color: var(--text-color);
@@ -298,9 +298,8 @@
 
 
 .right_content {
-  max-width: 950px;
+  max-width: 850px;
   width: 100%;
-  flex: 1;
 
   .station_details {
     .title_container {
